syntax = "proto3";

package rivet.backend.pkg.job_run.msg.stop;

import "legacy/proto/common.proto";

/// name = "msg-job-run-stop"
/// deduplicate = true
/// parameters = [
/// 	{ name = "run_id" },
/// ]
message Message {
	reserved 2;

	rivet.common.Uuid run_id = 1;
	bool skip_kill_alloc = 3;
}

